--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="netease">网易云音乐</string>
     <string name="tencent">QQ音乐</string>
 
+    <string name="swipe2refresh">下拉更新歌单</string>
 </resources>
